--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -496,6 +496,8 @@
   <string name="widget_linear_layout_horz" translatable="false">LinearLayout (H)</string>
   <string name="widget_linear_layout_vert" translatable="false">LinearLayout (V)</string>
   <string name="widget_relative_layout" translatable="false">RelativeLayout</string>
+  <string name="widget_scrollview" translatable="false">ScrollView</string>
+  <string name="widget_horizontal_scrollview" translatable="false">HorizontalScrollView</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
