--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -500,6 +500,10 @@
   <string name="widget_relative_layout" translatable="false">RelativeLayout</string>
   <string name="widget_scrollview" translatable="false">ScrollView</string>
   <string name="widget_horizontal_scrollview" translatable="false">HorizontalScrollView</string>
+  <string name="widget_text_clock" translatable="false">TextClock</string>
+  <string name="widget_digital_clock" translatable="false">DigitalClock</string>
+  <string name="widget_calendar_view" translatable="false">CalendarView</string>
+  <string name="widget_space" translatable="false">Space</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
