--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -505,6 +505,7 @@
   <string name="widget_calendar_view" translatable="false">CalendarView</string>
   <string name="widget_space" translatable="false">Space</string>
   <string name="widget_number_picker" translatable="false">NumberPicker</string>
+  <string name="widget_chronometer" translatable="false">Chronometer</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
