--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -506,6 +506,7 @@
   <string name="widget_space" translatable="false">Space</string>
   <string name="widget_number_picker" translatable="false">NumberPicker</string>
   <string name="widget_chronometer" translatable="false">Chronometer</string>
+  <string name="widget_rating_bar" translatable="false">RatingBar</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
