--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -509,6 +509,7 @@
   <string name="widget_rating_bar" translatable="false">RatingBar</string>
   <string name="widget_quick_contact_badge" translatable="false">QuickContactBadge</string>
   <string name="widget_videoview" translatable="false">VideoView</string>
+  <string name="widget_analog_clock" translatable="false">AnalogClock</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
