--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -510,6 +510,7 @@
   <string name="widget_quick_contact_badge" translatable="false">QuickContactBadge</string>
   <string name="widget_videoview" translatable="false">VideoView</string>
   <string name="widget_analog_clock" translatable="false">AnalogClock</string>
+  <string name="widget_grid_view" translatable="false">GridView</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
