--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -511,6 +511,7 @@
   <string name="widget_videoview" translatable="false">VideoView</string>
   <string name="widget_analog_clock" translatable="false">AnalogClock</string>
   <string name="widget_grid_view" translatable="false">GridView</string>
+  <string name="widget_viewanimator" translatable="false">ViewAnimator</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
