--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -515,6 +515,7 @@
   <string name="widget_viewswitcher" translatable="false">ViewSwitcher</string>
   <string name="widget_textswitcher" translatable="false">TextSwitcher</string>
   <string name="widget_imageswitcher" translatable="false">ImageSwitcher</string>
+  <string name="widget_viewflipper" translatable="false">ViewFlipper</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
