--- a/resources/src/main/res/values-id/strings.xml
+++ b/resources/src/main/res/values-id/strings.xml
@@ -22,7 +22,7 @@
   <string name="discussions_on_telegram">Diskusi di Telegram</string>
   <string name="official_tg_channel">Channel Telegram Resmi</string>
   <string name="msg_empty_view">Tidak ada yang dapat kami tampilkan untuk anda&#8230;</string>
-  <string name="btn_terminal">Terminal</string>
+  <string name="title_terminal">Terminal</string>
   <string name="reset">Setel ulang</string>
   <string name="app_logs">Log App</string>
   <string name="ide_logs">Log IDE</string>
@@ -175,7 +175,7 @@
   <string name="restype_other">Lainnya</string>
   <string name="classtype_class">Class</string>
   <string name="classtype_activity">Activity</string>
-  <string name="classtype_interface">Interface</string>
+  <string name="title_interface">Interface</string>
   <string name="classtype_enum">Enum</string>
   <string name="msg_checking_storage_permissions">Mengecek ijin penyimpanan</string>
   <string name="msg_failed_list_files">Gagal memuat file-file dalam projek!</string>
