--- a/resources/src/main/res/values-pt/strings.xml
+++ b/resources/src/main/res/values-pt/strings.xml
@@ -22,7 +22,7 @@
   <string name="discussions_on_telegram">Discussões no Telegram</string>
   <string name="official_tg_channel">Canal oficial do Telegram</string>
   <string name="msg_empty_view">Não tenho nada para lhe mostrar...</string>
-  <string name="btn_terminal">Terminal</string>
+  <string name="title_terminal">Terminal</string>
   <string name="reset">Redefinir</string>
   <string name="app_logs">Logs de aplicativos</string>
   <string name="ide_logs">Registros da IDE</string>
@@ -175,7 +175,7 @@
   <string name="restype_other">Outro</string>
   <string name="classtype_class">Classe</string>
   <string name="classtype_activity">Activity</string>
-  <string name="classtype_interface">Interface</string>
+  <string name="title_interface">Interface</string>
   <string name="classtype_enum">Enum</string>
   <string name="msg_checking_storage_permissions">Verificando as permissões de armazenamento</string>
   <string name="msg_failed_list_files">Falha ao listar os arquivos do projeto!</string>
