--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -510,6 +510,12 @@
   <string name="widget_quick_contact_badge" translatable="false">QuickContactBadge</string>
   <string name="widget_videoview" translatable="false">VideoView</string>
   <string name="widget_analog_clock" translatable="false">AnalogClock</string>
+  <string name="widget_grid_view" translatable="false">GridView</string>
+  <string name="widget_viewanimator" translatable="false">ViewAnimator</string>
+  <string name="widget_viewswitcher" translatable="false">ViewSwitcher</string>
+  <string name="widget_textswitcher" translatable="false">TextSwitcher</string>
+  <string name="widget_imageswitcher" translatable="false">ImageSwitcher</string>
+  <string name="widget_viewflipper" translatable="false">ViewFlipper</string>
 
   <!-- GIT -->
   <string name="git_clone">Clone</string>
