--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -2,20 +2,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
+  <string name="app_name" translatable="false">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE uses a modified build of the JDK which is licensed under the GNU General Public License v2.0. The source code and the license of the JDK is available at : </string>
   <string name="title_open_source_licenses">Open source licenses</string>
   <string name="msg_about_licensed_under">Licensed under: </string>
   <string name="about_option_email">Email</string>
   <string name="about_option_website">Website</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
+  <string name="about_footer_alternate" translatable="false">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s for %2$s</string>
   <string name="about_subtitle">Simply, an IDE for Android</string>
   <string name="msg_get_package_failed">Failed to extract package name!</string>
   <string name="msg_share_app">AndroidIDE is an Integrated Development Environment for building Android apps on your Android Smartphone. It supports :\n1. Gradle \n2. OpenJDK 17.0–22.\n3. Advanced Java auto completion\n4. XML Auto Completion \n5. Kotlin Support and much more.\n\nDownload AndroidIDE at https://androidide.com</string>
   <string name="msg_need_help">If you\'re facing issues while using AndroidIDE or with building Android Apps, you can join the Telegram Group ask for help there.\n\nYou can also send suggesstions on our email.</string>
   <string name="discuss_amp_help">Discuss &amp; help</string>
-  <string name="title_github">GitHub</string>
+  <string name="title_github" translatable="false">GitHub</string>
   <string name="need_help">Need Help?</string>
   <string name="other">Other</string>
   <string name="share_with_friends">Share with Friends</string>
@@ -53,12 +53,12 @@
 
   <!-- Project Builder -->
   <string name="lint">Lint</string>
-  <string name="lint_debug">lintDebug</string>
-  <string name="lint_release">lintRelease</string>
+  <string name="lint_debug" translatable="false">lintDebug</string>
+  <string name="lint_release" translatable="false">lintRelease</string>
+  <string name="build_debug" translatable="false">assembleDebug</string>
+  <string name="build_release" translatable="false">assembleRelease</string>
   <string name="build">Build</string>
-  <string name="build_debug">assembleDebug</string>
   <string name="build_output">Build output</string>
-  <string name="build_release">assembleRelease</string>
   <string name="lint_tasks">Lint tasks</string>
   <string name="clean_amp_build">Clean &amp; build</string>
   <string name="clean_project">Clean</string>
@@ -270,7 +270,7 @@
   <string name="idepref_java_matchLower_title">Match completions in lower case</string>
   <string name="title_common">Common</string>
   <string name="idepref_editor_category_common" translatable="false">@string/title_common</string>
-  <string name="idepref_editor_category_java">Java</string>
+  <string name="idepref_editor_category_java" translatable="false">Java</string>
   <string name="title_files_unsaved">Unsaved files</string>
   <string name="msg_files_unsaved">Some files are not saved. Would you like to save them before closing? Unsaved files are: \n%s</string>
   <string name="idepref_editor_autoSave_title">Save before closing files</string>
@@ -334,7 +334,7 @@
   <string name="build_status_failed">Build failed. See build output for more details.</string>
   <string name="build_status_sucess">Build successful</string>
   <string name="msg_output_text_extraction_failed">Failed to get text from editor</string>
-  <string name="template_def_app_name">My Application</string>
+  <string name="template_def_app_name" translatable="false">My Application</string>
   <string name="err_invalid_data_by_intent">Intent returned invalid data</string>
   <string name="msg_select_from_primary_storage">Select a directory from primary storage</string>
   <string name="err_authority_not_allowed">Authority \'%s\' not allowed</string>
@@ -362,7 +362,7 @@
   <string name="idepref_about_summary">More about AndroidIDE.</string>
   <string name="idepref_general_summary">General IDE configuration.</string>
   <string name="idepref_editor_summary">Configure the editor.</string>
-  <string name="xml">XML</string>
+  <string name="xml" translatable="false">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">Trim final new line</string>
   <string name="idepref_xml_insertFinalNewLine_title">Insert final new line</string>
   <string name="idepref_xml_trimFinalNewLine_summary">Remove extra empty line at the end of file</string>
@@ -467,8 +467,9 @@
   <string name="msg_loading_tasks">Loading tasks...</string>
   <string name="title_all_tasks">All tasks</string>
   <string name="msg_feature_unimplemented">This feature is not implemented yet.</string>
-  <string name="ui_category_widgets">Widgets</string>
-  <string name="ui_category_layouts">Layouts</string>
+
+  <string name="ui_category_widgets" translatable="false">Widgets</string>
+  <string name="ui_category_layouts" translatable="false">Layouts</string>
 
   <string name="widget_view" translatable="false">View</string>
   <string name="widget_textview" translatable="false">TextView</string>
