--- a/resources/src/main/res/values-de/strings.xml
+++ b/resources/src/main/res/values-de/strings.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE verwendet einen modifizierten Build des JDK, das unter der GNU General Public License v2.0 lizenziert ist. Der Quellcode und die Lizenz des JDK sind verf&#xFC;gbar unter:</string>
   <string name="title_open_source_licenses">Open-Source-Lizenzen</string>
   <string name="msg_about_licensed_under">Lizenziert unter:</string>
   <string name="about_option_email">E-Mail</string>
   <string name="about_option_website">Internetseite</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s f&#xFC;r %2$s</string>
   <string name="about_subtitle">Die IDE f&#xFC;r Android Ger&#xE4;te</string>
   <string name="msg_get_package_failed">Fehler beim Extrahieren des Paketnamens!</string>
   <string name="msg_share_app">AndroidIDE ist eine integrierte Entwicklungsumgebung zum Erstellen von Android-Apps auf Ihrem Android-Smartphone. Es unterst&#xFC;tzt:\n1. Gradle \n2. OpenJDK 17.0-22.\n3. Erweiterte automatische Java-Vervollst&#xE4;ndigung\n4. Automatische XML-Vervollst&#xE4;ndigung \n5. Kotlin-Support und vieles mehr.\n\nLaden sie AndroidIDE unter https://androidide.com herunter</string>
   <string name="msg_need_help">Wenn Sie bei der Verwendung von AndroidIDE oder beim Erstellen von Android-Apps auf Probleme sto&#xDF;en, k&#xF6;nnen Sie unserer Telegram-Gruppe beitreten und dort um Hilfe bitten.\n\nSie k&#xF6;nnen uns auch Vorschl&#xE4;ge per E-Mail senden.</string>
   <string name="discuss_amp_help">Diskutieren &amp; Hilfe</string>
-  <string name="title_github">GitHub</string>
   <string name="need_help">Brauchen Sie Hilfe?</string>
   <string name="other">Andere</string>
   <string name="share_with_friends">Mit Freunden teilen</string>
@@ -49,12 +46,8 @@
   <string name="msg_device_not_supported">Leider wird Ihr Ger&#xE4;t derzeit nicht unterst&#xFC;tzt. Wir entschuldigen uns f&#xFC;r die Unannehmlichkeiten.\n\nUnterst&#xFC;tzte CPU-ABIs: aarch64 und armeabi-v7a</string>
   <!-- Project Builder -->
   <string name="lint">Lint</string>
-  <string name="lint_debug">lintDebug</string>
-  <string name="lint_release">lintRelease</string>
   <string name="build">Bauen</string>
-  <string name="build_debug">AssembleDebug</string>
   <string name="build_output">Build-Ausgabe</string>
-  <string name="build_release">assembbleRelease</string>
   <string name="lint_tasks">Lint-Aufgaben</string>
   <string name="clean_amp_build">Clean &amp; build</string>
   <string name="clean_project">S&#xE4;ubern</string>
@@ -70,7 +63,6 @@
   <string name="title_install_apks">APK(s) installieren</string>
   <string name="title_clear_output">Ausgabe s&#xE4;ubern</string>
   <string name="run">Ausführen</string>
-  <string name="gradle">Gradle</string>
   <string name="title_first_build">Erster Build</string>
   <string name="msg_first_build">Dies ist der erste Build, nachdem Sie AndroidIDE installiert haben. Der erste Build dauert normalerweise einige Zeit, da Gradle ben&#xF6;tigte Dateien herunterl&#xE4;dt. Dieser Vorgang kann etwa 10 bis 15 Minuten dauern. Dies h&#xE4;ngt jedoch von Ihrer Netzwerkverbindung ab.\n\nBitte haben Sie etwas Geduld &#x2026;</string>
   <!-- Project -->
@@ -100,13 +92,11 @@
   <string name="template_navigation_drawer">Projekt mit NavigationDrawer</string>
   <string name="template_libgdx">LibGDX Spiel</string>
   <string name="template_description_libgdx">LibGDX-Spieleprojekt eingerichtet, um ein Bild als Beispiel zu rendern.</string>
-  <string name="template_compose">Jetpack Compose</string>
   <string name="template_description_compose">Basic Jetpack Compose Hello World Projekt.</string>
   <string name="template_navigation_tabs">Bottom Navigation Activity</string>
   <string name="template_navigation_tabs_description">Erstellt eine neue Activity mit eine bottom navigation</string>
   <string name="template_tabs">Tabbed Activity</string>
   <string name="template_tabs_description">Erstellt eine neue leere Activity mit Tabs</string>
-  <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">Native C++</string>
   <string name="template_cpp_description">Erstellt ein neues Projekt mit einer leeren Activity konfiguriert um JNI zu benutzen</string>
   <string name="template_no_activity">Keine Activity</string>
@@ -255,7 +245,6 @@
   <string name="action_expand_selection">Auswahl erweitern</string>
   <string name="idepref_java_matchLower_title">Vervollständigungen in Kleinbuchstaben nutzen</string>
   <string name="title_common">Common</string>
-  <string name="idepref_editor_category_java">Java</string>
   <string name="title_files_unsaved">Ungespeicherte Dateien</string>
   <string name="msg_files_unsaved">Einige Dateien wurden noch nicht gespeichert. Möchtest du diese nun speichern? Nicht gespeicherte Dateien: %s</string>
   <string name="idepref_editor_autoSave_title">Dateien vor dem schließen speichern</string>
@@ -274,7 +263,7 @@
   <string name="msg_file_tree">Dateipfad</string>
   <string name="hint_color_resource">Farbwert</string>
   <string name="title_color_picker">Farbauswahl</string>
-  <string name="hint_string_value">String-Wert</string>
+  <string name="hint_attr_value">Attribute value</string>
   <string name="hint_string_resource">String-Ressource</string>
   <string name="hint_resource_reference">Any resource reference</string>
   <string name="msg_code_actions">Aktionen</string>
@@ -318,7 +307,6 @@
   <string name="build_status_failed">Build ist fehlgeschlagen. Sieh dir die Ausgabe an für mehr Informationen</string>
   <string name="build_status_sucess">Build erfolgreich</string>
   <string name="msg_output_text_extraction_failed">Fehler beim empfangen des Textes vom Editor</string>
-  <string name="template_def_app_name">Meine App</string>
   <string name="err_invalid_data_by_intent">Der Intent hat falsche Daten zurückgeliefert</string>
   <string name="msg_select_from_primary_storage">Wählen Sie ein Verzeichnis aus dem Primärspeicher aus</string>
   <string name="err_authority_not_allowed">Authority \'%s\' ist nicht erlaubt</string>
@@ -345,7 +333,6 @@
   <string name="idepref_about_summary">Mehr über AndroidIDE.</string>
   <string name="idepref_general_summary">Allgemeine IDE-Konfiguration.</string>
   <string name="idepref_editor_summary">Configure the editor.</string>
-  <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">Trim final new line</string>
   <string name="idepref_xml_insertFinalNewLine_title">Insert final new line</string>
   <string name="idepref_xml_trimFinalNewLine_summary">Remove extra empty line at the end of file</string>
@@ -372,6 +359,7 @@
   <string name="idepref_maxLineWidth_title">Max. Linienbreite</string>
   <string name="idepref_maxLineWidth_summary">The maximum number of characters a line should have.</string>
   <string name="idepref_splitAttrIndentSize_title">Split attributes indent size</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
   <string name="idepref_preservedNewLines_title">Preserved new lines</string>
   <string name="idepref_preservedNewLines_summary">The maximum number of continuous line breaks that should be preserved.</string>
   <string name="idepref_emptyElements_title">Empty elements behaviour</string>
@@ -445,33 +433,6 @@
   <string name="msg_loading_tasks">Aufgaben werden geladen...</string>
   <string name="title_all_tasks">Alle Aufgaben</string>
   <string name="msg_feature_unimplemented">Diese Funktion ist noch nicht implementiert.</string>
-  <string name="ui_category_widgets">Widgets</string>
-  <string name="ui_category_layouts">Layouts</string>
-  <string name="widget_textview">TextView</string>
-  <string name="widget_button">Button</string>
-  <string name="widget_checkbox">CheckBox</string>
-  <string name="widget_checked_textview">CheckedTextViev</string>
-  <string name="widget_edittext">EditText</string>
-  <string name="widget_image_button">ImageButton</string>
-  <string name="widget_image_view">ImageView</string>
-  <string name="widget_progressbar">ProgressBar</string>
-  <string name="widget_radio_button">RadioButton</string>
-  <string name="widget_seekbar">SeekBar</string>
-  <string name="widget_spinner">Spinner</string>
-  <string name="layout_linear">LinearLayout</string>
-  <string name="layout_relative">RelativeLayout</string>
-  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
-  <string name="widget_listview">ListView</string>
-  <string name="widget_surfaceview">SurfaceView</string>
-  <string name="widget_switch">Switch</string>
-  <string name="widget_textureview">TextureView</string>
-  <string name="widget_togglebutton">ToggleButton</string>
-  <string name="widget_webview">WebView</string>
-  <string name="widget_frame_layout">FrameLayout</string>
-  <string name="widget_grid_layout">GridLayout</string>
-  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <!-- GIT -->
   <string name="git_clone">Clone</string>
   <string name="git_clone_repo">Clone git repository</string>
@@ -479,5 +440,16 @@
   <string name="git_clone_in_progress">Cloning repository</string>
   <string name="git_clone_success">Git clone successful</string>
   <string name="git_clone_failed">Failed to clone git repository</string>
-  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
+  <string name="msg_select_attr">Select an attribute from the below list</string>
+  <string name="action_show_hierarchy">Show layout hierarchy</string>
+  <string name="idepref_editor_colorScheme">Color Scheme</string>
+  <string name="idepref_editor_colorScheme_summary">Choose color scheme to use in editor</string>
+  <string name="idepref_general_uiMode">UI Mode</string>
+  <string name="idepref_general_uiMode_summary">Choose UI mode for the IDE</string>
+  <string name="uiMode_light">Light</string>
+  <string name="uiMode_dark">Dark</string>
+  <string name="uiMode_system">Follow system</string>
+  <string name="idepref_general_materialYou_summary">Enjoy an experience closer to your device (requires restart).</string>
+  <string name="idepref_general_projectConfig">Project configuration</string>
+  <string name="msg_app_launch_failed">Failed to launch application. See IDE logs for more info.</string>
 </resources>
