--- a/resources/src/main/res/values-fr/strings.xml
+++ b/resources/src/main/res/values-fr/strings.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE utilise une version modifiée du JDK d\'ont la licence est sous GNU General Public licence v2.0. Le code source et la licence du JDK sont disponibles ici : </string>
   <string name="title_open_source_licenses">licence Open Source</string>
   <string name="msg_about_licensed_under">licence sous:&#x20;</string>
   <string name="about_option_email">Émail</string>
   <string name="about_option_website">Site Web</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s pour %2$s</string>
   <string name="about_subtitle">Simplement, un IDE pour Android</string>
   <string name="msg_get_package_failed">Impossible d\'extraire le nom du package !</string>
   <string name="msg_share_app">AndroidIDE est un Environnement de développement integré (IDE) pour la création d\'application Android sur votre appareil android. Il support :\n1. Gradle \n2. OpenJDK 17.0-22.\n3. Complétation Java automatique \n4. Complétation XML Auto \n5. Support Kotlin et bien plus.\n\nTélecharger AndroidIDE sur https://androidide.com</string>
   <string name="msg_need_help">Si vous rencontrez des problémes lorsque vous utilisez AndroidIDE (ex: pendant la compilation d\'une application), vous pouvez demandez de l\'aide sur le groupe Telegram (Anglais).\n\nVous pouvez également demander de l\'aide sur notre émail.</string>
   <string name="discuss_amp_help">Discussions &amp; Aides</string>
-  <string name="title_github">Github</string>
   <string name="need_help">Besoin d\'aide ?</string>
   <string name="other">Autre</string>
   <string name="share_with_friends">Partager avec des amis</string>
@@ -49,12 +46,8 @@
   <string name="msg_device_not_supported">Malheureusement, votre appareil n\'est pas supporté pour le moment, nous sommes désolés pour le problème occasionné.\n\nCPU ABIs supportés: aarch64 et armeabi-v7a</string>
   <!-- Project Builder -->
   <string name="lint">Lint</string>
-  <string name="lint_debug">lintDebug</string>
-  <string name="lint_release">lintRelease</string>
   <string name="build">Compiler</string>
-  <string name="build_debug">assembleDebug</string>
   <string name="build_output">Build output</string>
-  <string name="build_release">assembleRelease</string>
   <string name="lint_tasks">Lint tasks</string>
   <string name="clean_amp_build">Nettoyer et compiler</string>
   <string name="clean_project">Nettoyer</string>
@@ -70,7 +63,6 @@
   <string name="title_install_apks">Installer l\'APK</string>
   <string name="title_clear_output">Nettoyer la console</string>
   <string name="run">Compiler</string>
-  <string name="gradle">Gradle</string>
   <string name="title_first_build">Première compilation</string>
   <string name="msg_first_build">C\'est la première compilation que vous effectuez après l\'installation de AndroidIDE. La première compilation met un peu plus de temps car il télécharge les dépendances et les plugins. Ce processus prendra environ 10&#8211;15 minutes, cela dépends également de votre connexion internet.\n\Soyez patient&#8230;</string>
   <!-- Project -->
@@ -100,13 +92,11 @@
   <string name="template_navigation_drawer">Projet navigation drawer</string>
   <string name="template_libgdx">Jeu LibGDX</string>
   <string name="template_description_libgdx">Projet Jeu LibGDX, affiche une image comme example.</string>
-  <string name="template_compose">Jetpack Compose</string>
   <string name="template_description_compose">Simple projet Jetpack Compose.</string>
   <string name="template_navigation_tabs">Activité Bottom Navigation </string>
   <string name="template_navigation_tabs_description">Créer une nouvelle activité avec le Bottom Navigation </string>
   <string name="template_tabs">Projet avec les Tabs</string>
   <string name="template_tabs_description">Créer un projet vide avec Tabs</string>
-  <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">Native C++</string>
   <string name="template_cpp_description">Créez un nouveau projet avec une activité vide configuré pour utiliser JNI</string>
   <string name="template_no_activity">Pas d\'activité</string>
@@ -255,7 +245,6 @@
   <string name="action_expand_selection">Sélection expansion</string>
   <string name="idepref_java_matchLower_title">Faire correspondre les complétions en minuscules</string>
   <string name="title_common">Common</string>
-  <string name="idepref_editor_category_java">Java</string>
   <string name="title_files_unsaved">Fichiers non sauvegardés</string>
   <string name="msg_files_unsaved">Certains fichiers n\'ont pas été sauvegardés, voulez vous les sauvegarder avant de les fermer ? Fichiers non sauvegardés: \n%s</string>
   <string name="idepref_editor_autoSave_title">Sauvegarder avant de fermer les fichiers</string>
@@ -274,7 +263,7 @@
   <string name="msg_file_tree">Fichiers</string>
   <string name="hint_color_resource">Color resource</string>
   <string name="title_color_picker">Color picker</string>
-  <string name="hint_string_value">String value</string>
+  <string name="hint_attr_value">Attribute value</string>
   <string name="hint_string_resource">String resource</string>
   <string name="hint_resource_reference">any resource reference</string>
   <string name="msg_code_actions">Actions</string>
@@ -318,7 +307,6 @@
   <string name="build_status_failed">Build failed. See build output for more details.</string>
   <string name="build_status_sucess">Build successful</string>
   <string name="msg_output_text_extraction_failed">Failed to get text from editor</string>
-  <string name="template_def_app_name">My Application</string>
   <string name="err_invalid_data_by_intent">Intent returned invalid data</string>
   <string name="msg_select_from_primary_storage">Select a directory from primary storage</string>
   <string name="err_authority_not_allowed">Authority \'%s\' not allowed</string>
@@ -345,7 +333,6 @@
   <string name="idepref_about_summary">More about AndroidIDE.</string>
   <string name="idepref_general_summary">General IDE configuration.</string>
   <string name="idepref_editor_summary">Configure the editor.</string>
-  <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">Trim final new line</string>
   <string name="idepref_xml_insertFinalNewLine_title">Insert final new line</string>
   <string name="idepref_xml_trimFinalNewLine_summary">Remove extra empty line at the end of file</string>
@@ -372,6 +359,7 @@
   <string name="idepref_maxLineWidth_title">Max line width</string>
   <string name="idepref_maxLineWidth_summary">The maximum number of characters a line should have.</string>
   <string name="idepref_splitAttrIndentSize_title">Split attributes indent size</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
   <string name="idepref_preservedNewLines_title">Preserved new lines</string>
   <string name="idepref_preservedNewLines_summary">The maximum number of continuous line breaks that should be preserved.</string>
   <string name="idepref_emptyElements_title">Empty elements behaviour</string>
@@ -445,33 +433,6 @@
   <string name="msg_loading_tasks">Loading tasks...</string>
   <string name="title_all_tasks">All tasks</string>
   <string name="msg_feature_unimplemented">This feature is not implemented yet.</string>
-  <string name="ui_category_widgets">Widgets</string>
-  <string name="ui_category_layouts">Layouts</string>
-  <string name="widget_textview">TextView</string>
-  <string name="widget_button">Button</string>
-  <string name="widget_checkbox">CheckBox</string>
-  <string name="widget_checked_textview">CheckedTextView</string>
-  <string name="widget_edittext">EditText</string>
-  <string name="widget_image_button">ImageButton</string>
-  <string name="widget_image_view">ImageView</string>
-  <string name="widget_progressbar">ProgressBar</string>
-  <string name="widget_radio_button">RadioButton</string>
-  <string name="widget_seekbar">SeekBar</string>
-  <string name="widget_spinner">Spinner</string>
-  <string name="layout_linear">LinearLayout</string>
-  <string name="layout_relative">RelativeLayout</string>
-  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
-  <string name="widget_listview">ListView</string>
-  <string name="widget_surfaceview">SurfaceView</string>
-  <string name="widget_switch">Switch</string>
-  <string name="widget_textureview">TextureView</string>
-  <string name="widget_togglebutton">ToggleButton</string>
-  <string name="widget_webview">WebView</string>
-  <string name="widget_frame_layout">FrameLayout</string>
-  <string name="widget_grid_layout">GridLayout</string>
-  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <!-- GIT -->
   <string name="git_clone">Clone</string>
   <string name="git_clone_repo">Clone git repository</string>
@@ -479,5 +440,16 @@
   <string name="git_clone_in_progress">Cloning repository</string>
   <string name="git_clone_success">Git clone successful</string>
   <string name="git_clone_failed">Failed to clone git repository</string>
-  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
+  <string name="msg_select_attr">Select an attribute from the below list</string>
+  <string name="action_show_hierarchy">Show layout hierarchy</string>
+  <string name="idepref_editor_colorScheme">Color Scheme</string>
+  <string name="idepref_editor_colorScheme_summary">Choose color scheme to use in editor</string>
+  <string name="idepref_general_uiMode">UI Mode</string>
+  <string name="idepref_general_uiMode_summary">Choose UI mode for the IDE</string>
+  <string name="uiMode_light">Light</string>
+  <string name="uiMode_dark">Dark</string>
+  <string name="uiMode_system">Follow system</string>
+  <string name="idepref_general_materialYou_summary">Enjoy an experience closer to your device (requires restart).</string>
+  <string name="idepref_general_projectConfig">Project configuration</string>
+  <string name="msg_app_launch_failed">Failed to launch application. See IDE logs for more info.</string>
 </resources>
