--- a/resources/src/main/res/values-hi/strings.xml
+++ b/resources/src/main/res/values-hi/strings.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE JDK के एक संशोधित निर्माण का उपयोग करता है जिसे GNU General Public License v2.0 के तहत लाइसेंस प्राप्त है। स्रोत कोड और जेडीके का लाइसेंस यहां उपलब्ध है: </string>
   <string name="title_open_source_licenses">ओपन सोर्स लाइसेंस</string>
   <string name="msg_about_licensed_under">लाइसेंस</string>
   <string name="about_option_email">ईमेल</string>
   <string name="about_option_website">वेबसाइट</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
-  <string name="about_footer">AndroidIDE %1$s for %2$s</string>
+  <string name="about_footer">%2$s के लिए AndroidIDE %1$s</string>
   <string name="about_subtitle">बस, एक आईडीई एंड्रॉयड के लिए</string>
   <string name="msg_get_package_failed">पैकेज का नाम निकालने में विफल रहे !</string>
   <string name="msg_share_app">AndroidIDE आपके Android स्मार्टफ़ोन पर एंड्रॉइड ऐप्स बनाने के लिए एक एकीकृत विकास परिवेश है । यह समर्थन करता है : \n1. Gradle \n2. OpenJDK 17.0-22.\n3. Advanced Java auto completion\n4. XML Auto Completion \n5. Kotlin Support और भी बहुत कुछ।\n\n AndroidIDE यहा से डाउनलोड करे https://androidide.com</string>
   <string name="msg_need_help">यदि आपको AndroidIDE का उपयोग करते समय या Android ऐप्स बनाते समय समस्याओं का सामना करना पड़ रहा है, तो आप टेलीग्राम समूह में शामिल हो सकते हैं और वहां सहायता मांग सकते हैं।\n\nआप हमारे ईमेल पर भी सुझाव भेज सकते हैं।</string>
   <string name="discuss_amp_help">चर्चा और मदद</string>
-  <string name="title_github">GitHub</string>
   <string name="need_help">मदद की ज़रूरत है?</string>
   <string name="other">अन्य</string>
   <string name="share_with_friends">मित्रो के साथ शेयर करे</string>
@@ -49,12 +46,8 @@
   <string name="msg_device_not_supported">दुर्भाग्य से, आपका डिवाइस इस समय समर्थित नहीं है। असुविधा के लिए हमें खेद है.\n\nसमर्थित CPU ABIs: aarch64 और armeabi-v7a</string>
   <!-- Project Builder -->
   <string name="lint">लिंट</string>
-  <string name="lint_debug">लिंट डिबग</string>
-  <string name="lint_release">लिंट रिलीज़</string>
   <string name="build">बिल्ड</string>
-  <string name="build_debug">असेंबल डिबग</string>
   <string name="build_output">बिल्ड आउटपुट</string>
-  <string name="build_release">असेंबल रिलीज़</string>
   <string name="lint_tasks">लिंट टास्क्स</string>
   <string name="clean_amp_build">क्लीन &amp; बिल्ड</string>
   <string name="clean_project">क्लीन</string>
@@ -70,7 +63,6 @@
   <string name="title_install_apks">APK(s) इंस्टॉल करें</string>
   <string name="title_clear_output">आउटपुट हटाएँ</string>
   <string name="run">रन</string>
-  <string name="gradle">Gradle</string>
   <string name="title_first_build">पहला निर्माण</string>
   <string name="msg_first_build">AndroidIDE इंस्टॉल करने के बाद यह पहली बार बिल्ड है। पहले निर्माण में आमतौर पर समय लगता है क्योंकि ग्रेडल सभी डिपेंडेंसीज और प्लगइन्स को डाउनलोड करता है। इस प्रक्रिया में लगभग 10–15 मिनट का समय लग सकता है। लेकिन यह पूरी तरह से आपके नेटवर्क कनेक्शन पर निर्भर करता है।\n\nकृपया धैर्य रखें…</string>
   <!-- Project -->
@@ -100,13 +92,11 @@
   <string name="template_navigation_drawer">Navigation drawer प्रोजेक्ट</string>
   <string name="template_libgdx">LibGDX गेम</string>
   <string name="template_description_libgdx">एक उदाहरण के रूप में एक छवि प्रस्तुत करने के लिए स्थापित LibGDX गेम प्रोजेक्ट।</string>
-  <string name="template_compose">Jetpack Compose</string>
   <string name="template_description_compose">बुनियादी Jetpack Compose हेलो वर्ल्ड प्रोजेक्ट।</string>
   <string name="template_navigation_tabs">BottomNavigationView एक्टिविटी</string>
   <string name="template_navigation_tabs_description">BottomNavigationView के साथ एक नई एक्टिविटी बनाता है</string>
   <string name="template_tabs">टैब एक्टिविटी</string>
   <string name="template_tabs_description">टैब के साथ एक नई खाली एक्टिविटी बनाता है</string>
-  <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">नेटिव C++</string>
   <string name="template_cpp_description">JNI का उपयोग करने के लिए कॉन्फ़िगर की गई खाली एक्टिविटी के साथ एक नया प्रोजेक्ट बनाता है</string>
   <string name="template_no_activity">बिना किसी एक्टिविटी के</string>
@@ -255,7 +245,6 @@
   <string name="action_expand_selection">चयन का विस्तार करें</string>
   <string name="idepref_java_matchLower_title">कम्पलेशन्स लोअर केस में मिलाये</string>
   <string name="title_common">सामान्य</string>
-  <string name="idepref_editor_category_java">जावा</string>
   <string name="title_files_unsaved">फ़ाइल्स सेव नहीं की गयी है</string>
   <string name="msg_files_unsaved">कुछ फ़ाइलें सेव नहीं की गई हैं। क्या आप बंद करने से पहले उन्हें सेव करना चाहेंगे? सेव न की गयी फ़ाइल्स : %s</string>
   <string name="idepref_editor_autoSave_title">फ़ाइलें बंद करने से पहले सेव करे</string>
@@ -274,7 +263,7 @@
   <string name="msg_file_tree">फ़ाइल ट्री</string>
   <string name="hint_color_resource">रंग रिसोर्स</string>
   <string name="title_color_picker">रंग पीकर</string>
-  <string name="hint_string_value">स्ट्रिंग वैल्यू</string>
+  <string name="hint_attr_value">एट्रिब्यूट वैल्यू</string>
   <string name="hint_string_resource">स्ट्रिंग रिसोर्स</string>
   <string name="hint_resource_reference">कोई रिसोर्स संदर्भ</string>
   <string name="msg_code_actions">कोड क्रियाएं</string>
@@ -318,7 +307,6 @@
   <string name="build_status_failed">निर्माण विफल रहा। अधिक विवरण के लिए बिल्ड आउटपुट देखें।</string>
   <string name="build_status_sucess">निर्माण सफल हुआ</string>
   <string name="msg_output_text_extraction_failed">एडिटर से टेक्स्ट प्राप्त करने में विफल रहे</string>
-  <string name="template_def_app_name">मेरा एप्लीकेशन</string>
   <string name="err_invalid_data_by_intent">इन्टेंट ने इंवालिड डेटा रिटर्न किया</string>
   <string name="msg_select_from_primary_storage">प्राइमरी स्टोरेज से एक डायरेक्टरी का चयन करें</string>
   <string name="err_authority_not_allowed">अथॉरिटी \'%s\' अलाउ नही है</string>
@@ -345,7 +333,6 @@
   <string name="idepref_about_summary">AndroidIDE के बारे में अधिक |</string>
   <string name="idepref_general_summary">सामान्य IDE कॉन्फ़िगरेशन |</string>
   <string name="idepref_editor_summary">एडिटर को कॉन्फ़िगर करें।</string>
-  <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">अंतिम नई लाइन ट्रिम करें</string>
   <string name="idepref_xml_insertFinalNewLine_title">अंतिम नई लाइन सम्मिलित करें।</string>
   <string name="idepref_xml_trimFinalNewLine_summary">फ़ाइल के अंत में अतिरिक्त खाली पंक्ति निकालें</string>
@@ -372,6 +359,7 @@
   <string name="idepref_maxLineWidth_title">मैक्स लाइन विड्थ</string>
   <string name="idepref_maxLineWidth_summary">एक पंक्ति में वर्णों की अधिकतम संख्या चुनें।</string>
   <string name="idepref_splitAttrIndentSize_title">विभाजित ऐट्रिब्यूट्स का इंडेंट साइज</string>
+  <string name="idepref_splitAttrIndentSize_summary">विभाजित ऐट्रिब्यूट्स के लिए इंडेंट करने के लिए रिक्त स्थान की संख्या।</string>
   <string name="idepref_preservedNewLines_title">संरक्षित नई लाइनें</string>
   <string name="idepref_preservedNewLines_summary">निरंतर लाइन ब्रेक की अधिकतम संख्या जिसे संरक्षित किया जाना चाहिए।</string>
   <string name="idepref_emptyElements_title">खाली एलिमेंट्स का व्यवहार</string>
@@ -445,33 +433,6 @@
   <string name="msg_loading_tasks">टास्क लोड हो रहे हैं...</string>
   <string name="title_all_tasks">सभी टास्कस</string>
   <string name="msg_feature_unimplemented">यह सुविधा अभी तक लागू नहीं हुई है।</string>
-  <string name="ui_category_widgets">विजेट</string>
-  <string name="ui_category_layouts">लेआउट</string>
-  <string name="widget_textview">टेक्सटव्यू</string>
-  <string name="widget_button">बटन</string>
-  <string name="widget_checkbox">चेकबॉक्स</string>
-  <string name="widget_checked_textview">चेक्ड टेक्सटव्यू</string>
-  <string name="widget_edittext">एडिटेक्सट</string>
-  <string name="widget_image_button">इमेज बटन</string>
-  <string name="widget_image_view">इमेज व्यू</string>
-  <string name="widget_progressbar">प्रोग्रेस बार</string>
-  <string name="widget_radio_button">रेडियो बटन</string>
-  <string name="widget_seekbar">सीक बार</string>
-  <string name="widget_spinner">स्पिनर</string>
-  <string name="layout_linear">लीनियर लेआउट</string>
-  <string name="layout_relative">रिलेटिव लेआउट</string>
-  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
-  <string name="widget_listview">ListView</string>
-  <string name="widget_surfaceview">SurfaceView</string>
-  <string name="widget_switch">Switch</string>
-  <string name="widget_textureview">TextureView</string>
-  <string name="widget_togglebutton">ToggleButton</string>
-  <string name="widget_webview">WebView</string>
-  <string name="widget_frame_layout">FrameLayout</string>
-  <string name="widget_grid_layout">GridLayout</string>
-  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <!-- GIT -->
   <string name="git_clone">क्लोन</string>
   <string name="git_clone_repo">Git रिपॉजिटरी क्लोन करें</string>
@@ -479,5 +440,16 @@
   <string name="git_clone_in_progress">रिपॉजिटरी क्लोन हो रही है</string>
   <string name="git_clone_success">Git क्लोन सफल हुआ</string>
   <string name="git_clone_failed">Git रिपॉजिटरी क्लोन करने में विफल</string>
-  <string name="idepref_splitAttrIndentSize_summary">विभाजित ऐट्रिब्यूट्स के लिए इंडेंट करने के लिए रिक्त स्थान की संख्या।</string>
+  <string name="msg_select_attr">नीचे दी गई सूची से एक एट्रिब्यूट का चयन करें</string>
+  <string name="action_show_hierarchy">लेआउट हायरार्की दिखाएं</string>
+  <string name="idepref_editor_colorScheme">कलर स्कीम</string>
+  <string name="idepref_editor_colorScheme_summary">एडिटर में उपयोग करने के लिए कलर स्कीम चुनें</string>
+  <string name="idepref_general_uiMode">UI मोड</string>
+  <string name="idepref_general_uiMode_summary">IDE के लिए UI मोड चुनें</string>
+  <string name="uiMode_light">लाइट</string>
+  <string name="uiMode_dark">डार्क</string>
+  <string name="uiMode_system">सिस्टम का पालन करें</string>
+  <string name="idepref_general_materialYou_summary">अपने डिवाइस के करीब एक अनुभव का आनंद लें (पुनः आरंभ करने की आवश्यकता है)।</string>
+  <string name="idepref_general_projectConfig">प्रोजेक्ट कॉन्फ़िगरेशन</string>
+  <string name="msg_app_launch_failed">एप्लिकेशन लॉन्च करने में विफल। अधिक जानकारी के लिए IDE लॉग देखें।</string>
 </resources>
