--- a/resources/src/main/res/values-pt/strings.xml
+++ b/resources/src/main/res/values-pt/strings.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE usa uma construção modificada do JDK que é licenciada sob a GNU General Public License v2.0. O código fonte e a licença do JDK estão disponíveis em :</string>
   <string name="title_open_source_licenses">Licenças de código aberto</string>
   <string name="msg_about_licensed_under">Licenciado sob:</string>
   <string name="about_option_email">E-mail</string>
   <string name="about_option_website">Website</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s para %2$s</string>
   <string name="about_subtitle">Simplesmente, uma IDE para Android</string>
   <string name="msg_get_package_failed">Falha ao extrair o nome do pacote!</string>
   <string name="msg_share_app">AndroidIDE é um ambiente de desenvolvimento integrado para construir aplicativos Android no seu Smartphone. Ele suporta :\n1. Gradle \n2. OpenJDK 17.0-22.\n3. Autocomplete avançado de Java\n4. Autocomplete automático de XML \n5. Suporte a Kotlin e muito mais.\n\nInstale AndroidIDE em https://androidide.com</string>
   <string name="msg_need_help">Se você estiver enfrentando problemas durante o uso do AndroidIDE ou com a construção de aplicativos Android, você pode se juntar ao Grupo do Telegram para pedir ajuda lá.\n\nVocê também pode enviar sugestões em nosso e-mail.</string>
   <string name="discuss_amp_help">Discutir &amp; ajuda</string>
-  <string name="title_github">GitHub</string>
   <string name="need_help">Precisa de ajuda?</string>
   <string name="other">Outro</string>
   <string name="share_with_friends">Compartilhe com amigos</string>
@@ -49,12 +46,8 @@
   <string name="msg_device_not_supported">Infelizmente, seu dispositivo não é compatível no momento. Lamentamos o inconveniente.\n\nABIs de CPU compatíveis: aarch64 e armeabi-v7a</string>
   <!-- Project Builder -->
   <string name="lint">Lint</string>
-  <string name="lint_debug">lintDebug</string>
-  <string name="lint_release">lintRelease</string>
   <string name="build">Compilar</string>
-  <string name="build_debug">assembleDebug</string>
   <string name="build_output">Logs de compilação</string>
-  <string name="build_release">assembleRelease</string>
   <string name="lint_tasks">Lint</string>
   <string name="clean_amp_build">Limpar &amp; construir</string>
   <string name="clean_project">Limpar</string>
@@ -70,7 +63,6 @@
   <string name="title_install_apks">Instalar APK(s)</string>
   <string name="title_clear_output">Limpar logs</string>
   <string name="run">Compilar</string>
-  <string name="gradle">Gradle</string>
   <string name="title_first_build">Primeira compilação</string>
   <string name="msg_first_build">Esta é a primeira vez que se compila depois de instalar o AndroidIDE. A primeira compilação geralmente leva tempo, pois a Gradle baixa todas as dependências e plugins. Este processo pode demorar cerca de 10-15 minutos. Mas isto depende totalmente de sua conexão de rede.\n\nPor favor, seja paciente...</string>
   <!-- Project -->
@@ -100,13 +92,11 @@
   <string name="template_navigation_drawer">Projeto com Drawer Navigation</string>
   <string name="template_libgdx">Jogo LibGDX</string>
   <string name="template_description_libgdx">Projeto de jogo LibGDX criado para renderizar uma imagem como exemplo.</string>
-  <string name="template_compose">Jetpack Compose</string>
   <string name="template_description_compose">Projeto básico Jetpack Compose hello world.</string>
   <string name="template_navigation_tabs">Activity Bottom Navigation</string>
   <string name="template_navigation_tabs_description">Cria uma nova activity com bottom navigation</string>
   <string name="template_tabs">Activity com abas</string>
   <string name="template_tabs_description">Cria uma nova activity em branco com abas</string>
-  <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">C++ nativo</string>
   <string name="template_cpp_description">Cria um novo projeto com uma Activity Vazia configurada para usar JNI</string>
   <string name="template_no_activity">Sem Activity</string>
@@ -255,7 +245,6 @@
   <string name="action_expand_selection">Expandir seleção</string>
   <string name="idepref_java_matchLower_title">Autocomplete sugerir com letras minúsculas</string>
   <string name="title_common">Comum</string>
-  <string name="idepref_editor_category_java">Java</string>
   <string name="title_files_unsaved">Arquivos não salvos</string>
   <string name="msg_files_unsaved">Alguns arquivos não foram salvos. Gostaria de salvá-los antes de fechar? Os arquivos não salvos são: \n%s</string>
   <string name="idepref_editor_autoSave_title">Salve antes de fechar os arquivos</string>
@@ -274,7 +263,7 @@
   <string name="msg_file_tree">Lista de arquivos</string>
   <string name="hint_color_resource">Recurso de cores</string>
   <string name="title_color_picker">Seletor de cores</string>
-  <string name="hint_string_value">Valor da string</string>
+  <string name="hint_attr_value">Attribute value</string>
   <string name="hint_string_resource">Recurso de string</string>
   <string name="hint_resource_reference">Qualquer referência de recurso</string>
   <string name="msg_code_actions">Ações</string>
@@ -318,7 +307,6 @@
   <string name="build_status_failed">Falha na compilação. Consulte os logs de compilação para obter mais detalhes.</string>
   <string name="build_status_sucess">Construir com sucesso</string>
   <string name="msg_output_text_extraction_failed">Falha ao obter texto do editor</string>
-  <string name="template_def_app_name">Meu aplicativo</string>
   <string name="err_invalid_data_by_intent">A intent retornou dados inválidos</string>
   <string name="msg_select_from_primary_storage">Selecione um diretório do armazenamento primário</string>
   <string name="err_authority_not_allowed">Autoridade \'%s\' não permitida</string>
@@ -345,7 +333,6 @@
   <string name="idepref_about_summary">Mais sobre o AndroidIDE.</string>
   <string name="idepref_general_summary">Configuração geral da IDE.</string>
   <string name="idepref_editor_summary">Configurar o editor.</string>
-  <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">Retirar linha final</string>
   <string name="idepref_xml_insertFinalNewLine_title">Inserir linha final</string>
   <string name="idepref_xml_trimFinalNewLine_summary">Remover linha extra vazia no final do arquivo</string>
@@ -372,6 +359,7 @@
   <string name="idepref_maxLineWidth_title">Largura máxima da linha</string>
   <string name="idepref_maxLineWidth_summary">O número máximo de caracteres que uma linha deve ter.</string>
   <string name="idepref_splitAttrIndentSize_title">Dividir o tamanho do recuo dos atributos</string>
+  <string name="idepref_splitAttrIndentSize_summary">O número de espaços a serem indexados para atributos divididos.</string>
   <string name="idepref_preservedNewLines_title">Novas linhas preservadas</string>
   <string name="idepref_preservedNewLines_summary">O número máximo de quebras de linha contínuas que devem ser preservadas.</string>
   <string name="idepref_emptyElements_title">Comportamento de elementos vazios</string>
@@ -445,33 +433,6 @@
   <string name="msg_loading_tasks">Carregando tarefas...</string>
   <string name="title_all_tasks">Todas as tarefas</string>
   <string name="msg_feature_unimplemented">Este recurso ainda não foi implementado.</string>
-  <string name="ui_category_widgets">Widgets</string>
-  <string name="ui_category_layouts">Layouts</string>
-  <string name="widget_textview">TextView</string>
-  <string name="widget_button">Button</string>
-  <string name="widget_checkbox">CheckBox</string>
-  <string name="widget_checked_textview">CheckedTextView</string>
-  <string name="widget_edittext">EditText</string>
-  <string name="widget_image_button">ImageButton</string>
-  <string name="widget_image_view">ImageView</string>
-  <string name="widget_progressbar">ProgressBar</string>
-  <string name="widget_radio_button">RadioButton</string>
-  <string name="widget_seekbar">SeekBar</string>
-  <string name="widget_spinner">Spinner</string>
-  <string name="layout_linear">LinearLayout</string>
-  <string name="layout_relative">RelativeLayout</string>
-  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
-  <string name="widget_listview">ListView</string>
-  <string name="widget_surfaceview">SurfaceView</string>
-  <string name="widget_switch">Switch</string>
-  <string name="widget_textureview">TextureView</string>
-  <string name="widget_togglebutton">ToggleButton</string>
-  <string name="widget_webview">WebView</string>
-  <string name="widget_frame_layout">FrameLayout</string>
-  <string name="widget_grid_layout">GridLayout</string>
-  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <!-- GIT -->
   <string name="git_clone">Clonar</string>
   <string name="git_clone_repo">Clonar repositório git</string>
@@ -479,5 +440,16 @@
   <string name="git_clone_in_progress">Clonando repositório</string>
   <string name="git_clone_success">Git clonado com sucesso</string>
   <string name="git_clone_failed">Falha ao clonar repositório git</string>
-  <string name="idepref_splitAttrIndentSize_summary">O número de espaços a serem indexados para atributos divididos.</string>
+  <string name="msg_select_attr">Select an attribute from the below list</string>
+  <string name="action_show_hierarchy">Show layout hierarchy</string>
+  <string name="idepref_editor_colorScheme">Color Scheme</string>
+  <string name="idepref_editor_colorScheme_summary">Choose color scheme to use in editor</string>
+  <string name="idepref_general_uiMode">UI Mode</string>
+  <string name="idepref_general_uiMode_summary">Choose UI mode for the IDE</string>
+  <string name="uiMode_light">Light</string>
+  <string name="uiMode_dark">Dark</string>
+  <string name="uiMode_system">Follow system</string>
+  <string name="idepref_general_materialYou_summary">Enjoy an experience closer to your device (requires restart).</string>
+  <string name="idepref_general_projectConfig">Project configuration</string>
+  <string name="msg_app_launch_failed">Failed to launch application. See IDE logs for more info.</string>
 </resources>
