--- a/resources/src/main/res/values-ru/strings.xml
+++ b/resources/src/main/res/values-ru/strings.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE использует модифицированную версию JDK, которая лицензирована согласно GNU General Public License v2.0. Исходный код JDK и лицензия доступны здесь: </string>
   <string name="title_open_source_licenses">Лицензирование открытого кода</string>
   <string name="msg_about_licensed_under">Лицензия: </string>
   <string name="about_option_email">Email</string>
   <string name="about_option_website">Вебсайт</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s для %2$s</string>
   <string name="about_subtitle">Просто IDE для Android</string>
   <string name="msg_get_package_failed">Ошибка распаковки имени пакета!</string>
   <string name="msg_share_app">AndroidIDE - это IDE (Integrated Development Environment - интегрированная среда разработки) для создания Android приложений на вашем Android смартфоне. AndroidIDE поддерживает:\n1. Gradle \n2. OpenJDK 11.0.1. \n3. Продвинутое автодополнение для Java \n4. Автодополнение для XML \n5. Поддержка Kotlin и многое другое. \n\nСкачайте AndroidIDE здесь: https://androidide.com</string>
   <string name="msg_need_help">Если вы столкнулись с какими-либо проблемами при использовании AndroidIDE или при сборке Android приложений, вы можете присоединиться к нашей группе в Telegram и попросить о помощи там.\n\nВы также можете присылать нам свои пожелания и предложения на наш электронный адрес.</string>
   <string name="discuss_amp_help">Обсуждение и помощь</string>
-  <string name="title_github">GitHub</string>
   <string name="need_help">Нужна помощь?</string>
   <string name="other">Другое</string>
   <string name="share_with_friends">Поделиться с друзьями</string>
@@ -49,12 +46,8 @@
   <string name="msg_device_not_supported">К сожалению, на данный момент ваше устройство не поддерживается. Приносим свои извинения.\n\nПоддерживаемые ABI: aarch64 и armeabi-v7a</string>
   <!-- Project Builder -->
   <string name="lint">Lint</string>
-  <string name="lint_debug">lintDebug</string>
-  <string name="lint_release">lintRelease</string>
   <string name="build">Сборка</string>
-  <string name="build_debug">assembleDebug</string>
   <string name="build_output">Результат сборки</string>
-  <string name="build_release">assembleRelease</string>
   <string name="lint_tasks">Сценарии Lint</string>
   <string name="clean_amp_build">Очистить и собрать</string>
   <string name="clean_project">Очистить проект</string>
@@ -70,7 +63,6 @@
   <string name="title_install_apks">Установить APK файл(ы)</string>
   <string name="title_clear_output">Очистить выходные файлы</string>
   <string name="run">Запустить</string>
-  <string name="gradle">Gradle</string>
   <string name="title_first_build">Первая сборка</string>
   <string name="msg_first_build">Это первая сборка после установки AndroidIDE. Первая сборка обычно занимает больше времени, так как Gradle скачивает все зависимости и плагины. Этот процесс может занять 10–15 минут, в зависимости от производительности вашего устройства.\n\nПожалуйста, подождите&#8230;</string>
   <!-- Project -->
@@ -100,13 +92,11 @@
   <string name="template_navigation_drawer">Проект с Navigation Drawer</string>
   <string name="template_libgdx">Игра LibGDX</string>
   <string name="template_description_libgdx">Проект игры LibGDX. Выводит изображение на экран в качестве примера.</string>
-  <string name="template_compose">Jetpack Compose</string>
   <string name="template_description_compose">Базовый hello world проект Jetpack Compose.</string>
   <string name="template_navigation_tabs">Проект с Bottom Navigation</string>
   <string name="template_navigation_tabs_description">Создаёт новую пустую активность с Bottom Navigation</string>
   <string name="template_tabs">Проект с вкладками</string>
   <string name="template_tabs_description">Создаёт новую пустую активность с вкладками</string>
-  <string name="template_fragment_and_viewmodel">Проект Fragment + ViewModel</string>
   <string name="template_cpp">Нативный проект на C++</string>
   <string name="template_cpp_description">Создаёт новый проект с Empty Activity, сконфигурированный для использования JNI</string>
   <string name="template_no_activity">Проект без активности</string>
@@ -255,7 +245,6 @@
   <string name="action_expand_selection">Расширить выделение</string>
   <string name="idepref_java_matchLower_title">Искать совпадения в строчном регистре</string>
   <string name="title_common">Общее</string>
-  <string name="idepref_editor_category_java">Java</string>
   <string name="title_files_unsaved">Несохраненные файлы</string>
   <string name="msg_files_unsaved">Некоторые файлы не сохранены. Хотите сохранить их перед закрытием? Список несохраненных файлов: \n%s</string>
   <string name="idepref_editor_autoSave_title">Сохранять файлы перед закрытием</string>
@@ -274,7 +263,7 @@
   <string name="msg_file_tree">Дерево файлов</string>
   <string name="hint_color_resource">Цветовой ресурс</string>
   <string name="title_color_picker">Средство выбора цвета</string>
-  <string name="hint_string_value">Строковое значение</string>
+  <string name="hint_attr_value">Attribute value</string>
   <string name="hint_string_resource">Строковый ресурс</string>
   <string name="hint_resource_reference">Любая ссылка на ресурс</string>
   <string name="msg_code_actions">Действия</string>
@@ -318,7 +307,6 @@
   <string name="build_status_failed">Сборка завершилась неудачей. Дополнительные сведения см. в выводе сборки.</string>
   <string name="build_status_sucess">Сборка прошла успешно</string>
   <string name="msg_output_text_extraction_failed">Не удалось получить текст из редактора</string>
-  <string name="template_def_app_name">My Application</string>
   <string name="err_invalid_data_by_intent">Намерение вернуло недопустимые данные</string>
   <string name="msg_select_from_primary_storage">Выберите каталог из основного хранилища</string>
   <string name="err_authority_not_allowed">Полномочия \'%s\' не разрешены</string>
@@ -345,7 +333,6 @@
   <string name="idepref_about_summary">More about AndroidIDE.</string>
   <string name="idepref_general_summary">General IDE configuration.</string>
   <string name="idepref_editor_summary">Configure the editor.</string>
-  <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">Trim final new line</string>
   <string name="idepref_xml_insertFinalNewLine_title">Insert final new line</string>
   <string name="idepref_xml_trimFinalNewLine_summary">Remove extra empty line at the end of file</string>
@@ -372,6 +359,7 @@
   <string name="idepref_maxLineWidth_title">Max line width</string>
   <string name="idepref_maxLineWidth_summary">The maximum number of characters a line should have.</string>
   <string name="idepref_splitAttrIndentSize_title">Split attributes indent size</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
   <string name="idepref_preservedNewLines_title">Preserved new lines</string>
   <string name="idepref_preservedNewLines_summary">The maximum number of continuous line breaks that should be preserved.</string>
   <string name="idepref_emptyElements_title">Empty elements behaviour</string>
@@ -445,33 +433,6 @@
   <string name="msg_loading_tasks">Loading tasks...</string>
   <string name="title_all_tasks">All tasks</string>
   <string name="msg_feature_unimplemented">This feature is not implemented yet.</string>
-  <string name="ui_category_widgets">Widgets</string>
-  <string name="ui_category_layouts">Layouts</string>
-  <string name="widget_textview">TextView</string>
-  <string name="widget_button">Button</string>
-  <string name="widget_checkbox">CheckBox</string>
-  <string name="widget_checked_textview">CheckedTextView</string>
-  <string name="widget_edittext">EditText</string>
-  <string name="widget_image_button">ImageButton</string>
-  <string name="widget_image_view">ImageView</string>
-  <string name="widget_progressbar">ProgressBar</string>
-  <string name="widget_radio_button">RadioButton</string>
-  <string name="widget_seekbar">SeekBar</string>
-  <string name="widget_spinner">Spinner</string>
-  <string name="layout_linear">LinearLayout</string>
-  <string name="layout_relative">RelativeLayout</string>
-  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
-  <string name="widget_listview">ListView</string>
-  <string name="widget_surfaceview">SurfaceView</string>
-  <string name="widget_switch">Switch</string>
-  <string name="widget_textureview">TextureView</string>
-  <string name="widget_togglebutton">ToggleButton</string>
-  <string name="widget_webview">WebView</string>
-  <string name="widget_frame_layout">FrameLayout</string>
-  <string name="widget_grid_layout">GridLayout</string>
-  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <!-- GIT -->
   <string name="git_clone">Clone</string>
   <string name="git_clone_repo">Clone git repository</string>
@@ -479,5 +440,16 @@
   <string name="git_clone_in_progress">Cloning repository</string>
   <string name="git_clone_success">Git clone successful</string>
   <string name="git_clone_failed">Failed to clone git repository</string>
-  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
+  <string name="msg_select_attr">Select an attribute from the below list</string>
+  <string name="action_show_hierarchy">Show layout hierarchy</string>
+  <string name="idepref_editor_colorScheme">Color Scheme</string>
+  <string name="idepref_editor_colorScheme_summary">Choose color scheme to use in editor</string>
+  <string name="idepref_general_uiMode">UI Mode</string>
+  <string name="idepref_general_uiMode_summary">Choose UI mode for the IDE</string>
+  <string name="uiMode_light">Light</string>
+  <string name="uiMode_dark">Dark</string>
+  <string name="uiMode_system">Follow system</string>
+  <string name="idepref_general_materialYou_summary">Enjoy an experience closer to your device (requires restart).</string>
+  <string name="idepref_general_projectConfig">Project configuration</string>
+  <string name="msg_app_launch_failed">Failed to launch application. See IDE logs for more info.</string>
 </resources>
