--- a/resources/src/main/res/values-zh/strings.xml
+++ b/resources/src/main/res/values-zh/strings.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="app_name">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE使用了以GPL v2.0开源的JDK的修改版构建版本。你可以在此处找到它的源代码和许可证： </string>
   <string name="title_open_source_licenses">开源许可证</string>
   <string name="msg_about_licensed_under">许可证: </string>
   <string name="about_option_email">邮件</string>
   <string name="about_option_website">网站</string>
-  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
   <string name="about_footer">AndroidIDE %1$s (%2$s)</string>
   <string name="about_subtitle">简单地说，一款适用于 Android 的 IDE</string>
   <string name="msg_get_package_failed">获取包名失败!</string>
   <string name="msg_share_app">AndroidIDE是一个用于在Android设备上构建Android应用的集成开发环境。它支持： \n1. Gradle \n2. OpenJDK 17.0-22\n3. 先进的Java自动补全\n4. XML自动补全 \n5. Kotlin支持，还有更多\n\n请从这里下载AndroidIDE：https://androidide.com</string>
   <string name="msg_need_help">如果您在使用AndroidIDE构建应用时遇到任何问题，您可以加入Telegram群组寻求帮助。\n\n您也可以通过电子邮件对我们提出建议。</string>
   <string name="discuss_amp_help">讨论 &amp; 帮助</string>
-  <string name="title_github">GitHub</string>
   <string name="need_help">需要帮助?</string>
   <string name="other">其他</string>
   <string name="share_with_friends">分享给朋友</string>
@@ -49,12 +46,8 @@
   <string name="msg_device_not_supported">很不幸，您的设备当前不受我们支持。我们对其产生的不便很抱歉。\n\n支持的CPU架构: aarch64 与 armeabi-v7a</string>
   <!-- Project Builder -->
   <string name="lint">Lint</string>
-  <string name="lint_debug">lintDebug</string>
-  <string name="lint_release">lintRelease</string>
   <string name="build">Build</string>
-  <string name="build_debug">assembleDebug</string>
   <string name="build_output">编译输出</string>
-  <string name="build_release">assembleRelease</string>
   <string name="lint_tasks">Lint 任务</string>
   <string name="clean_amp_build">清理 &amp; 构建</string>
   <string name="clean_project">清理缓存</string>
@@ -70,7 +63,6 @@
   <string name="title_install_apks">安装APK</string>
   <string name="title_clear_output">清空输出</string>
   <string name="run">运行</string>
-  <string name="gradle">Gradle</string>
   <string name="title_first_build">第一次编译</string>
   <string name="msg_first_build">这是您安装AndroidIDE后第一次编译项目，由于需要下载Gradle和各种依赖项目，第一次编译需要较长时间。这可能要花费10&#8211;15分钟，但这完全取决于您的网络连接。\n\n请耐心等待 &#8230;</string>
   <!-- Project -->
@@ -100,13 +92,11 @@
   <string name="template_navigation_drawer">导航侧滑项目</string>
   <string name="template_libgdx">LibGDX 游戏</string>
   <string name="template_description_libgdx">LibGDX 游戏项目图像渲染示例</string>
-  <string name="template_compose">Jetpack Compose</string>
   <string name="template_description_compose">Jetpack Compose 基本 hello world 项目</string>
   <string name="template_navigation_tabs">底部导航栏 Activity</string>
   <string name="template_navigation_tabs_description">创建一个带有底部导航栏的 Activity</string>
   <string name="template_tabs">选项卡 Activity</string>
   <string name="template_tabs_description">新建一个带有选项卡的空白 Activity</string>
-  <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
   <string name="template_cpp">Native C++</string>
   <string name="template_cpp_description">创建一个使用 JNI 空白 Activity 的新项目</string>
   <string name="template_no_activity">无 Activity</string>
@@ -255,7 +245,6 @@
   <string name="action_expand_selection">扩选</string>
   <string name="idepref_java_matchLower_title">代码补全匹配小写字母</string>
   <string name="title_common">通用</string>
-  <string name="idepref_editor_category_java">Java</string>
   <string name="title_files_unsaved">未保存文件</string>
   <string name="msg_files_unsaved">部分文件并未保存，是否在关闭项目之前保存？未保存的文件：\n%s</string>
   <string name="idepref_editor_autoSave_title">关闭文件前自动保存</string>
@@ -274,7 +263,7 @@
   <string name="msg_file_tree">文件列表</string>
   <string name="hint_color_resource">Color 资源</string>
   <string name="title_color_picker">取色器</string>
-  <string name="hint_string_value">String 值</string>
+  <string name="hint_attr_value">Attribute value</string>
   <string name="hint_string_resource">String 资源</string>
   <string name="hint_resource_reference">任一资源引用</string>
   <string name="msg_code_actions">操作</string>
@@ -318,7 +307,6 @@
   <string name="build_status_failed">构建失败，请参阅构建输出以获取详情</string>
   <string name="build_status_sucess">构建成功</string>
   <string name="msg_output_text_extraction_failed">无法从编辑器获取文本</string>
-  <string name="template_def_app_name">My Application</string>
   <string name="err_invalid_data_by_intent">Intent 返回了无效数据</string>
   <string name="msg_select_from_primary_storage">从内部存储中选择目录</string>
   <string name="err_authority_not_allowed">权限“%s”不被允许</string>
@@ -345,7 +333,6 @@
   <string name="idepref_about_summary">更多关于 AndroidIDE</string>
   <string name="idepref_general_summary">常规 IDE 配置</string>
   <string name="idepref_editor_summary">编辑器 配置</string>
-  <string name="xml">XML</string>
   <string name="idepref_xml_trimFinalNewLine_title">删除 末尾新行</string>
   <string name="idepref_xml_insertFinalNewLine_title">插入 末尾新行</string>
   <string name="idepref_xml_trimFinalNewLine_summary">删除文件末尾多余的空行</string>
@@ -372,6 +359,7 @@
   <string name="idepref_maxLineWidth_title">最大行宽</string>
   <string name="idepref_maxLineWidth_summary">每行字符数最高上限</string>
   <string name="idepref_splitAttrIndentSize_title">拆分属性缩进大小</string>
+  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
   <string name="idepref_preservedNewLines_title">新线保留</string>
   <string name="idepref_preservedNewLines_summary">应保留连续换行符的最大数目</string>
   <string name="idepref_emptyElements_title">空元素行为</string>
@@ -445,33 +433,6 @@
   <string name="msg_loading_tasks">Loading tasks...</string>
   <string name="title_all_tasks">All tasks</string>
   <string name="msg_feature_unimplemented">This feature is not implemented yet.</string>
-  <string name="ui_category_widgets">Widgets</string>
-  <string name="ui_category_layouts">Layouts</string>
-  <string name="widget_textview">文本</string>
-  <string name="widget_button">按钮</string>
-  <string name="widget_checkbox">复选框</string>
-  <string name="widget_checked_textview">复选框文本</string>
-  <string name="widget_edittext">编辑框</string>
-  <string name="widget_image_button">图像按钮</string>
-  <string name="widget_image_view">图片</string>
-  <string name="widget_progressbar">进度条</string>
-  <string name="widget_radio_button">单选框</string>
-  <string name="widget_seekbar">拖动条</string>
-  <string name="widget_spinner">下拉框</string>
-  <string name="layout_linear">线性布局</string>
-  <string name="layout_relative">相对布局</string>
-  <string name="widget_auto_complete_textview">AutoCompleteTextView</string>
-  <string name="widget_listview">ListView</string>
-  <string name="widget_surfaceview">SurfaceView</string>
-  <string name="widget_switch">Switch</string>
-  <string name="widget_textureview">TextureView</string>
-  <string name="widget_togglebutton">ToggleButton</string>
-  <string name="widget_webview">WebView</string>
-  <string name="widget_frame_layout">FrameLayout</string>
-  <string name="widget_grid_layout">GridLayout</string>
-  <string name="widget_linear_layout_horz">LinearLayout (H)</string>
-  <string name="widget_linear_layout_vert">LinearLayout (V)</string>
-  <string name="widget_relative_layout">RelativeLayout</string>
   <!-- GIT -->
   <string name="git_clone">Clone</string>
   <string name="git_clone_repo">Clone git repository</string>
@@ -479,5 +440,16 @@
   <string name="git_clone_in_progress">Cloning repository</string>
   <string name="git_clone_success">Git clone successful</string>
   <string name="git_clone_failed">Failed to clone git repository</string>
-  <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
+  <string name="msg_select_attr">Select an attribute from the below list</string>
+  <string name="action_show_hierarchy">Show layout hierarchy</string>
+  <string name="idepref_editor_colorScheme">Color Scheme</string>
+  <string name="idepref_editor_colorScheme_summary">Choose color scheme to use in editor</string>
+  <string name="idepref_general_uiMode">UI Mode</string>
+  <string name="idepref_general_uiMode_summary">Choose UI mode for the IDE</string>
+  <string name="uiMode_light">Light</string>
+  <string name="uiMode_dark">Dark</string>
+  <string name="uiMode_system">Follow system</string>
+  <string name="idepref_general_materialYou_summary">Enjoy an experience closer to your device (requires restart).</string>
+  <string name="idepref_general_projectConfig">Project configuration</string>
+  <string name="msg_app_launch_failed">Failed to launch application. See IDE logs for more info.</string>
 </resources>
