feat(lsp/java): add 'Fix imports' actions
The 'Fix imports' action analyzes the file contents, walks through the diagnostic items looking for 'compiler.err.cant.resolve.location' errors, then performs an edit to
import all those classes at once. If multiple classes are found for a class name, the user is asked to choose the class that should be imported.

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -543,4 +543,7 @@
 
   <string name="btn_sync">Sync</string>
   <string name="btn_ignore_changes">Ignore these changes</string>
+  <string name="title_fix_imports">Fix imports</string>
+  <string name="msg_no_unresolved_classes">No unresolved class names found</string>
+  <string name="title_class_chooser">Which %1$s?</string>
 </resources>
