feat: add AIDL based LogSender API

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -548,4 +548,8 @@
   <string name="title_fix_imports">Fix imports</string>
   <string name="msg_no_unresolved_classes">No unresolved class names found</string>
   <string name="title_class_chooser">Which %1$s?</string>
+
+  <string name="permlab_bind_logger_service">bind to log service</string>
+  <string name="permdesc_bind_logger_service">Allows this application to bind to AndroidIDE\'s logging service. This permission is required for AndroidIDE to read logs of this application.</string>
+
 </resources>
